# bnex-challenge-frontend

./: .gitignore  pyproject.toml
core/api_client/: client.py  forms.py  models.py  urls.py  views.py
core/api_client/migrations/: 0001_initial.py
core/api_client/templates/api_client/: edit_api_connection.html  manage_api_connections.html
core/products/: client_api.py
core/service/: settings.py  urls.py
core/staticfiles/api_client/css/: styles.css
core/templates/: base.html
