[tool.poetry]
name = "frontend"
version = "0.1.0"
description = "Frontend to Product Management System"
authors = ["Maicon de Menezes <maicondmenezes@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
python-dotenv = "^1.0.1"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
blue = "^0.9.1"
isort = "^5.13.2"
taskipy = "^1.12.2"
ipykernel = "^6.29.4"
ipython = "^8.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint-review = "blue --check --diff . && isort --check --diff ."
lint = "blue . && isort ."
pre_test = "task lint"
test = "cd core && coverage run --source=. manage.py test"
post_test = "coverage html"
runserver = "python core/manage.py runserver"
makemigrations = "python core/manage.py makemigrations"
migrate = "python core/manage.py migrate"
createsuperuser = "python core/manage.py createsuperuser"